<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/layout_around_dialog"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="@dimen/padding_normal"
        android:text="@string/stamp_dialog_using_content_two"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_title" />

    <View
        android:id="@+id/view_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/stamp_stoke_grid_view" />

    <LinearLayout
        android:id="@+id/ll_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_white_left"
            android:gravity="center"
            android:padding="@dimen/padding_normal"
            android:text="@string/stamp_dialog_cancel"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <View
            android:id="@+id/line_two"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/stamp_stoke_grid_view" />

        <TextView
            android:id="@+id/tv_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_white"
            android:gravity="center"
            android:padding="@dimen/padding_normal"
            android:text="@string/stamp_dialog_ok"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>